--- a/github/firebase.json
+++ b/github/firebase.json
@@ -1,10 +1,26 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+  "hosting": [
+      {
+          "target": "github",
+          "public": "build",
+          "rewrites": [
+              {
+                  "source": "**",
+                  "destination": "/index.html"
+              }
+          ],
+          "ignore": ["firebase.json", "/.", "/node_modules/"]
+      },
+      {
+          "target": "storybook",
+          "public": "storybook-static",
+          "rewrites": [
+              {
+                  "source": "**",
+                  "destination": "/index.html"
+              }
+          ],
+          "ignore": ["firebase.json", "/.", "/node_modules/"]
+      }
+  ]
 }
