--- a/github/package.json
+++ b/github/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@primer/octicons-react": "^17.5.0",
+    "@sambego/storybook-state": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,8 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
     "typescript": "^4.8.3",
@@ -74,6 +77,7 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.7.18",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
