--- a/github/package.json
+++ b/github/package.json
@@ -11,7 +11,9 @@
     "@types/jest": "^29.0.3",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
     "firebase": "^9.10.0",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -22,6 +24,7 @@
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
