--- a/github/package.json
+++ b/github/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
+    "draco3d": "^1.5.3",
     "firebase": "^9.10.0",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
@@ -74,6 +75,7 @@
     "@storybook/addon-interactions": "^6.5.12",
     "@storybook/addon-links": "^6.5.12",
     "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/cli": "^6.5.12",
     "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/node-logger": "^6.5.12",
     "@storybook/preset-create-react-app": "^4.1.2",
