--- a/github/.vscode/settings.json
+++ b/github/.vscode/settings.json
@@ -3,6 +3,9 @@
   "window.commandCenter": true,
   "editor.quickSuggestions": {
     "strings": true
+  },
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
   }
 }
 
